syntax = "proto3";

package service;

option go_package = "/proto;proto";

service MessageService {
  rpc SendMessage (Message) returns (Response) {}
  rpc FetchLastXMessages (FetchLastXMessagesRequest) returns (FetchLastXMessagesResponse) {}
  rpc FetchLastXConversations (FetchLastXConversationsRequest) returns (FetchLastXConversationsResponse) {}
}

message Message {
  string sender = 1;
  string receiver = 2;
  string message = 3;
  string timestamp = 4;
}

message Response{
  string message = 1;
}

message FetchLastXMessagesRequest {
  string sender = 1;
  string receiver = 2;
  int32 startingPoint = 3;
  int32 count = 4;
}

message FetchLastXMessagesResponse {
  repeated Message messages = 1;
  int32 count = 2;
  bool hasMore = 3;
}

message FetchLastXConversationsRequest {
  string conversationMember = 1;
  int32 count = 2;
  int32 start_index = 3;
}

message SenderReceiverPair {
  string sender = 1;
  string receiver = 2;
}

message FetchLastXConversationsResponse {
  repeated SenderReceiverPair pairs = 1;
  int32 count = 2;
  bool hasMore = 3;
}